// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NotificationsPage: загруженный список нотификаций 1`] = `
<div
  className="sc-bxivhb dUiVDW"
>
  <div
    className="sc-1jxwge6-0 sc-14k9gvj-0 haaFGH"
  >
    <div
      className="sc-1jxwge6-0 sc-18ch56c-0 jIipSW"
      color="color1"
      fontFamily="bold"
      fontSize={9}
      fontWeight="bold"
    >
      Notifications
    </div>
    <div
      className="sc-1jxwge6-0 jSlHKu"
    >
      <div
        className="ReactTable"
        style={Object {}}
      >
        <div
          className="rt-table"
          role="grid"
        >
          <div
            className="rt-thead -header"
            style={
              Object {
                "minWidth": "300px",
              }
            }
          >
            <div
              className="rt-tr"
              role="row"
            >
              <div
                className="rt-th rt-resizable-header -cursor-pointer"
                onClick={[Function]}
                role="columnheader"
                style={
                  Object {
                    "flex": "100 0 auto",
                    "maxWidth": null,
                    "width": "100px",
                  }
                }
                tabIndex="-1"
              >
                <div
                  className="rt-resizable-header-content"
                >
                  Client
                </div>
                <div
                  className="rt-resizer"
                  onMouseDown={[Function]}
                  onTouchStart={[Function]}
                />
              </div>
              <div
                className="rt-th rt-resizable-header -cursor-pointer"
                onClick={[Function]}
                role="columnheader"
                style={
                  Object {
                    "flex": "100 0 auto",
                    "maxWidth": null,
                    "width": "100px",
                  }
                }
                tabIndex="-1"
              >
                <div
                  className="rt-resizable-header-content"
                >
                  Request date
                </div>
                <div
                  className="rt-resizer"
                  onMouseDown={[Function]}
                  onTouchStart={[Function]}
                />
              </div>
              <div
                className="rt-th rt-resizable-header -cursor-pointer"
                onClick={[Function]}
                role="columnheader"
                style={
                  Object {
                    "flex": "100 0 auto",
                    "maxWidth": null,
                    "width": "100px",
                  }
                }
                tabIndex="-1"
              >
                <div
                  className="rt-resizable-header-content"
                >
                  Status
                </div>
                <div
                  className="rt-resizer"
                  onMouseDown={[Function]}
                  onTouchStart={[Function]}
                />
              </div>
            </div>
          </div>
          <div
            className="rt-thead -filters"
            style={
              Object {
                "minWidth": "300px",
              }
            }
          >
            <div
              className="rt-tr"
              role="row"
            >
              <div
                className="rt-th"
                onClick={[Function]}
                role="columnheader"
                style={
                  Object {
                    "flex": "100 0 auto",
                    "maxWidth": null,
                    "width": "100px",
                  }
                }
                tabIndex="-1"
              >
                <input
                  onChange={[Function]}
                  style={
                    Object {
                      "width": "100%",
                    }
                  }
                  type="text"
                  value=""
                />
              </div>
              <div
                className="rt-th"
                onClick={[Function]}
                role="columnheader"
                style={
                  Object {
                    "flex": "100 0 auto",
                    "maxWidth": null,
                    "width": "100px",
                  }
                }
                tabIndex="-1"
              >
                <input
                  onChange={[Function]}
                  style={
                    Object {
                      "width": "100%",
                    }
                  }
                  type="text"
                  value=""
                />
              </div>
              <div
                className="rt-th"
                onClick={[Function]}
                role="columnheader"
                style={
                  Object {
                    "flex": "100 0 auto",
                    "maxWidth": null,
                    "width": "100px",
                  }
                }
                tabIndex="-1"
              >
                <select
                  onChange={[Function]}
                  style={
                    Object {
                      "width": "100%",
                    }
                  }
                  value="all"
                >
                  <option
                    value="all"
                  >
                    Show All
                  </option>
                  <option
                    value="reject"
                  >
                    Not approval
                  </option>
                  <option
                    value="resolve"
                  >
                    Approval
                  </option>
                  <option
                    value="wait"
                  >
                    Pending
                  </option>
                </select>
              </div>
            </div>
          </div>
          <div
            className="rt-tbody"
            style={
              Object {
                "minWidth": "300px",
              }
            }
          >
            <div
              className="rt-tr-group"
              role="rowgroup"
            >
              <div
                className="rt-tr -odd"
                role="row"
              >
                <div
                  className="rt-td"
                  onClick={[Function]}
                  role="gridcell"
                  style={
                    Object {
                      "flex": "100 0 auto",
                      "maxWidth": null,
                      "width": "100px",
                    }
                  }
                >
                  <div
                    className="sc-1jxwge6-0 sc-18ch56c-0 eiPgyn"
                    color="color1"
                    fontFamily="medium"
                    fontSize={6}
                  >
                    Armand Champlin Hauck
                  </div>
                </div>
                <div
                  className="rt-td"
                  onClick={[Function]}
                  role="gridcell"
                  style={
                    Object {
                      "flex": "100 0 auto",
                      "maxWidth": null,
                      "width": "100px",
                    }
                  }
                >
                  <div
                    className="sc-1jxwge6-0 sc-18ch56c-0 eiPgyn"
                    color="color1"
                    fontFamily="medium"
                    fontSize={6}
                  >
                    01.10.2018 15:50:54
                  </div>
                </div>
                <div
                  className="rt-td"
                  onClick={[Function]}
                  role="gridcell"
                  style={
                    Object {
                      "flex": "100 0 auto",
                      "maxWidth": null,
                      "width": "100px",
                    }
                  }
                >
                  <div
                    className="sc-1jxwge6-0 sc-18ch56c-0 fxqvUH"
                    color="color1"
                  >
                    Pending
                  </div>
                </div>
              </div>
            </div>
            <div
              className="rt-tr-group"
              role="rowgroup"
            >
              <div
                className="rt-tr -even"
                role="row"
              >
                <div
                  className="rt-td"
                  onClick={[Function]}
                  role="gridcell"
                  style={
                    Object {
                      "flex": "100 0 auto",
                      "maxWidth": null,
                      "width": "100px",
                    }
                  }
                >
                  <div
                    className="sc-1jxwge6-0 sc-18ch56c-0 eiPgyn"
                    color="color1"
                    fontFamily="medium"
                    fontSize={6}
                  >
                    Armand Champlin Hauck
                  </div>
                </div>
                <div
                  className="rt-td"
                  onClick={[Function]}
                  role="gridcell"
                  style={
                    Object {
                      "flex": "100 0 auto",
                      "maxWidth": null,
                      "width": "100px",
                    }
                  }
                >
                  <div
                    className="sc-1jxwge6-0 sc-18ch56c-0 eiPgyn"
                    color="color1"
                    fontFamily="medium"
                    fontSize={6}
                  >
                    01.10.2018 15:50:54
                  </div>
                </div>
                <div
                  className="rt-td"
                  onClick={[Function]}
                  role="gridcell"
                  style={
                    Object {
                      "flex": "100 0 auto",
                      "maxWidth": null,
                      "width": "100px",
                    }
                  }
                >
                  <div
                    className="sc-1jxwge6-0 sc-18ch56c-0 fxqvUH"
                    color="color1"
                  >
                    Approval
                  </div>
                </div>
              </div>
            </div>
            <div
              className="rt-tr-group"
              role="rowgroup"
            >
              <div
                className="rt-tr -padRow -odd"
                role="row"
                style={Object {}}
              >
                <div
                  className="rt-td"
                  role="gridcell"
                  style={
                    Object {
                      "flex": "100 0 auto",
                      "maxWidth": null,
                      "width": "100px",
                    }
                  }
                >
                  <span>
                     
                  </span>
                </div>
                <div
                  className="rt-td"
                  role="gridcell"
                  style={
                    Object {
                      "flex": "100 0 auto",
                      "maxWidth": null,
                      "width": "100px",
                    }
                  }
                >
                  <span>
                     
                  </span>
                </div>
                <div
                  className="rt-td"
                  role="gridcell"
                  style={
                    Object {
                      "flex": "100 0 auto",
                      "maxWidth": null,
                      "width": "100px",
                    }
                  }
                >
                  <span>
                     
                  </span>
                </div>
              </div>
            </div>
            <div
              className="rt-tr-group"
              role="rowgroup"
            >
              <div
                className="rt-tr -padRow -even"
                role="row"
                style={Object {}}
              >
                <div
                  className="rt-td"
                  role="gridcell"
                  style={
                    Object {
                      "flex": "100 0 auto",
                      "maxWidth": null,
                      "width": "100px",
                    }
                  }
                >
                  <span>
                     
                  </span>
                </div>
                <div
                  className="rt-td"
                  role="gridcell"
                  style={
                    Object {
                      "flex": "100 0 auto",
                      "maxWidth": null,
                      "width": "100px",
                    }
                  }
                >
                  <span>
                     
                  </span>
                </div>
                <div
                  className="rt-td"
                  role="gridcell"
                  style={
                    Object {
                      "flex": "100 0 auto",
                      "maxWidth": null,
                      "width": "100px",
                    }
                  }
                >
                  <span>
                     
                  </span>
                </div>
              </div>
            </div>
            <div
              className="rt-tr-group"
              role="rowgroup"
            >
              <div
                className="rt-tr -padRow -odd"
                role="row"
                style={Object {}}
              >
                <div
                  className="rt-td"
                  role="gridcell"
                  style={
                    Object {
                      "flex": "100 0 auto",
                      "maxWidth": null,
                      "width": "100px",
                    }
                  }
                >
                  <span>
                     
                  </span>
                </div>
                <div
                  className="rt-td"
                  role="gridcell"
                  style={
                    Object {
                      "flex": "100 0 auto",
                      "maxWidth": null,
                      "width": "100px",
                    }
                  }
                >
                  <span>
                     
                  </span>
                </div>
                <div
                  className="rt-td"
                  role="gridcell"
                  style={
                    Object {
                      "flex": "100 0 auto",
                      "maxWidth": null,
                      "width": "100px",
                    }
                  }
                >
                  <span>
                     
                  </span>
                </div>
              </div>
            </div>
            <div
              className="rt-tr-group"
              role="rowgroup"
            >
              <div
                className="rt-tr -padRow -even"
                role="row"
                style={Object {}}
              >
                <div
                  className="rt-td"
                  role="gridcell"
                  style={
                    Object {
                      "flex": "100 0 auto",
                      "maxWidth": null,
                      "width": "100px",
                    }
                  }
                >
                  <span>
                     
                  </span>
                </div>
                <div
                  className="rt-td"
                  role="gridcell"
                  style={
                    Object {
                      "flex": "100 0 auto",
                      "maxWidth": null,
                      "width": "100px",
                    }
                  }
                >
                  <span>
                     
                  </span>
                </div>
                <div
                  className="rt-td"
                  role="gridcell"
                  style={
                    Object {
                      "flex": "100 0 auto",
                      "maxWidth": null,
                      "width": "100px",
                    }
                  }
                >
                  <span>
                     
                  </span>
                </div>
              </div>
            </div>
            <div
              className="rt-tr-group"
              role="rowgroup"
            >
              <div
                className="rt-tr -padRow -odd"
                role="row"
                style={Object {}}
              >
                <div
                  className="rt-td"
                  role="gridcell"
                  style={
                    Object {
                      "flex": "100 0 auto",
                      "maxWidth": null,
                      "width": "100px",
                    }
                  }
                >
                  <span>
                     
                  </span>
                </div>
                <div
                  className="rt-td"
                  role="gridcell"
                  style={
                    Object {
                      "flex": "100 0 auto",
                      "maxWidth": null,
                      "width": "100px",
                    }
                  }
                >
                  <span>
                     
                  </span>
                </div>
                <div
                  className="rt-td"
                  role="gridcell"
                  style={
                    Object {
                      "flex": "100 0 auto",
                      "maxWidth": null,
                      "width": "100px",
                    }
                  }
                >
                  <span>
                     
                  </span>
                </div>
              </div>
            </div>
            <div
              className="rt-tr-group"
              role="rowgroup"
            >
              <div
                className="rt-tr -padRow -even"
                role="row"
                style={Object {}}
              >
                <div
                  className="rt-td"
                  role="gridcell"
                  style={
                    Object {
                      "flex": "100 0 auto",
                      "maxWidth": null,
                      "width": "100px",
                    }
                  }
                >
                  <span>
                     
                  </span>
                </div>
                <div
                  className="rt-td"
                  role="gridcell"
                  style={
                    Object {
                      "flex": "100 0 auto",
                      "maxWidth": null,
                      "width": "100px",
                    }
                  }
                >
                  <span>
                     
                  </span>
                </div>
                <div
                  className="rt-td"
                  role="gridcell"
                  style={
                    Object {
                      "flex": "100 0 auto",
                      "maxWidth": null,
                      "width": "100px",
                    }
                  }
                >
                  <span>
                     
                  </span>
                </div>
              </div>
            </div>
            <div
              className="rt-tr-group"
              role="rowgroup"
            >
              <div
                className="rt-tr -padRow -odd"
                role="row"
                style={Object {}}
              >
                <div
                  className="rt-td"
                  role="gridcell"
                  style={
                    Object {
                      "flex": "100 0 auto",
                      "maxWidth": null,
                      "width": "100px",
                    }
                  }
                >
                  <span>
                     
                  </span>
                </div>
                <div
                  className="rt-td"
                  role="gridcell"
                  style={
                    Object {
                      "flex": "100 0 auto",
                      "maxWidth": null,
                      "width": "100px",
                    }
                  }
                >
                  <span>
                     
                  </span>
                </div>
                <div
                  className="rt-td"
                  role="gridcell"
                  style={
                    Object {
                      "flex": "100 0 auto",
                      "maxWidth": null,
                      "width": "100px",
                    }
                  }
                >
                  <span>
                     
                  </span>
                </div>
              </div>
            </div>
            <div
              className="rt-tr-group"
              role="rowgroup"
            >
              <div
                className="rt-tr -padRow -even"
                role="row"
                style={Object {}}
              >
                <div
                  className="rt-td"
                  role="gridcell"
                  style={
                    Object {
                      "flex": "100 0 auto",
                      "maxWidth": null,
                      "width": "100px",
                    }
                  }
                >
                  <span>
                     
                  </span>
                </div>
                <div
                  className="rt-td"
                  role="gridcell"
                  style={
                    Object {
                      "flex": "100 0 auto",
                      "maxWidth": null,
                      "width": "100px",
                    }
                  }
                >
                  <span>
                     
                  </span>
                </div>
                <div
                  className="rt-td"
                  role="gridcell"
                  style={
                    Object {
                      "flex": "100 0 auto",
                      "maxWidth": null,
                      "width": "100px",
                    }
                  }
                >
                  <span>
                     
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="pagination-bottom"
        >
          <div
            className="sc-1jxwge6-0 wterhv-0 sc-1xpfs2x-2 ZdjAX"
          >
            <div
              className="sc-1jxwge6-0 iiFwBA"
              width="256px"
            >
              <button
                className="mxzgdr-0 euDJBk"
                disabled={true}
                onClick={[Function]}
                size="large"
                type="button"
              >
                <div
                  className="sc-1jxwge6-0 wterhv-0 eZGOHC"
                  width="100%"
                >
                  <div
                    className="sc-1jxwge6-0 wterhv-0 irkFkV"
                  >
                    <div
                      className="sc-1jxwge6-0 sc-18ch56c-0 iDivPt"
                      color="color1"
                      fill="inherit"
                      fontSize={13}
                    >
                      <svg
                        fill="inherit"
                        height="32px"
                        viewBox="0 0 40 40"
                        width="32px"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M6.43694 20.427C6.32825 20.3104 6.27394 20.1616 6.27394 20.0127C6.27394 19.8657 6.32706 19.7181 6.43388 19.6015L13.8755 11.4488C14.1025 11.1999 14.4882 11.1822 14.7373 11.4097C14.9863 11.6367 15.0027 12.0228 14.7763 12.2711L8.30219 19.3642L33.125 19.3642L33.125 20.5978L8.25831 20.5978L14.8312 27.6878C15.0607 27.9336 15.0461 28.3198 14.7983 28.5492C14.5518 28.778 14.1654 28.7633 13.9365 28.5163L6.43694 20.427Z"
                          fill="inherit"
                        />
                        <path
                          d="M20 40C8.95432 40 0 31.0457 0 20C0 8.95431 8.95432 0 20 0C31.0458 0 40 8.95431 40 20C40 31.0457 31.0458 40 20 40ZM20 38.75C30.3388 38.75 38.75 30.3388 38.75 20C38.75 9.66125 30.3388 1.25 20 1.25C9.66119 1.25 1.25 9.66125 1.25 20C1.25 30.3388 9.66119 38.75 20 38.75Z"
                          fill="inherit"
                        />
                      </svg>
                    </div>
                  </div>
                  <div
                    className="sc-1jxwge6-0 wterhv-0 irkFkV"
                  >
                    Previous
                  </div>
                  <div />
                </div>
              </button>
            </div>
            <div
              className="sc-1jxwge6-0 -center wterhv-0 gVcphP"
              width="100%"
            >
              <div
                className="sc-1jxwge6-0 wterhv-0 bfjBXV"
                style={
                  Object {
                    "borderRight": "1px solid rgba(162, 162, 162, 0.2)",
                  }
                }
                width="50%"
              >
                <div
                  className="sc-1jxwge6-0 sc-18ch56c-0 eiPgyn"
                  color="color1"
                  fontFamily="medium"
                  fontSize={6}
                >
                  Page
                </div>
                <div
                  className="sc-1jxwge6-0 eDvOfB"
                >
                  <input
                    className="sc-1xpfs2x-0 ifcyDr"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onKeyPress={[Function]}
                    type="number"
                    value={1}
                  />
                </div>
                <div
                  className="sc-1jxwge6-0 sc-18ch56c-0 gumoZQ"
                  color="color1"
                  fontFamily="medium"
                  fontSize={6}
                >
                  of
                   
                  1
                </div>
              </div>
              <div
                className="sc-1jxwge6-0 wterhv-0 bfjBXV"
                width="50%"
              >
                 
                <span
                  className="select-wrap -pageSizeOptions"
                >
                  <select
                    className="sc-1xpfs2x-1 klleuH"
                    onChange={[Function]}
                    value={10}
                  >
                    <option
                      value={5}
                    >
                      5
                       
                      rows
                    </option>
                    <option
                      value={10}
                    >
                      10
                       
                      rows
                    </option>
                    <option
                      value={20}
                    >
                      20
                       
                      rows
                    </option>
                    <option
                      value={25}
                    >
                      25
                       
                      rows
                    </option>
                    <option
                      value={50}
                    >
                      50
                       
                      rows
                    </option>
                    <option
                      value={100}
                    >
                      100
                       
                      rows
                    </option>
                  </select>
                </span>
              </div>
            </div>
            <div
              className="sc-1jxwge6-0 iiFwBA"
              width="256px"
            >
              <button
                className="mxzgdr-0 euDJBk"
                disabled={true}
                onClick={[Function]}
                size="large"
                type="button"
              >
                <div
                  className="sc-1jxwge6-0 wterhv-0 eZGOHC"
                  width="100%"
                >
                  <div />
                  <div
                    className="sc-1jxwge6-0 wterhv-0 irkFkV"
                  >
                    Next
                  </div>
                  <div
                    className="sc-1jxwge6-0 wterhv-0 irkFkV"
                  >
                    <div
                      className="sc-1jxwge6-0 sc-18ch56c-0 iDivPt"
                      color="color1"
                      fill="inherit"
                      fontSize={13}
                    >
                      <svg
                        fill="inherit"
                        height="32px"
                        viewBox="0 0 40 41"
                        width="32px"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M33.5631 20.9259C33.6718 20.8075 33.7261 20.6563 33.7261 20.5051C33.7261 20.3557 33.6729 20.2058 33.5661 20.0873L26.1245 11.8052C25.8975 11.5524 25.5118 11.5344 25.2627 11.7655C25.0137 11.9961 24.9973 12.3884 25.2237 12.6406L31.6978 19.8463L6.875 19.8463L6.875 21.0994L31.7417 21.0994L25.1688 28.3019C24.9393 28.5517 24.9539 28.944 25.2017 29.1771C25.4482 29.4094 25.8346 29.3946 26.0635 29.1436L33.5631 20.9259Z"
                          fill="inherit"
                        />
                        <path
                          d="M20 40.8095C31.0457 40.8095 40 31.7131 40 20.4921C40 9.27104 31.0457 0.174591 20 0.174591C8.95425 0.174591 0 9.27104 0 20.4921C0 31.7131 8.95425 40.8095 20 40.8095ZM20 39.5397C9.66119 39.5397 1.25 30.995 1.25 20.4921C1.25 9.98919 9.66119 1.44443 20 1.44443C30.3388 1.44443 38.75 9.98919 38.75 20.4921C38.75 30.995 30.3388 39.5397 20 39.5397Z"
                          fill="inherit"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </button>
            </div>
          </div>
        </div>
        <div
          className="sc-1jxwge6-0 d5w2g7-0 sc-1mb6nwv-0 eDeYkT"
        >
          <div
            className="sc-1jxwge6-0 sc-18ch56c-0 fzRVpo"
            color="color1"
            fontSize={12}
          >
            <div
              className="sc-181m7t4-0 ckrlTX"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`NotificationsPage: загрузка пользовательских данных 1`] = `
<div
  className="sc-bxivhb dUiVDW"
>
  <div
    className="sc-1jxwge6-0 sc-14k9gvj-0 haaFGH"
  >
    <div
      className="sc-1jxwge6-0 sc-18ch56c-0 jIipSW"
      color="color1"
      fontFamily="bold"
      fontSize={9}
      fontWeight="bold"
    >
      Notifications
    </div>
    <div
      className="sc-1jxwge6-0 jSlHKu"
    >
      <div
        className="ReactTable"
        style={Object {}}
      >
        <div
          className="rt-table"
          role="grid"
        >
          <div
            className="rt-thead -header"
            style={
              Object {
                "minWidth": "300px",
              }
            }
          >
            <div
              className="rt-tr"
              role="row"
            >
              <div
                className="rt-th rt-resizable-header -cursor-pointer"
                onClick={[Function]}
                role="columnheader"
                style={
                  Object {
                    "flex": "100 0 auto",
                    "maxWidth": null,
                    "width": "100px",
                  }
                }
                tabIndex="-1"
              >
                <div
                  className="rt-resizable-header-content"
                >
                  Client
                </div>
                <div
                  className="rt-resizer"
                  onMouseDown={[Function]}
                  onTouchStart={[Function]}
                />
              </div>
              <div
                className="rt-th rt-resizable-header -cursor-pointer"
                onClick={[Function]}
                role="columnheader"
                style={
                  Object {
                    "flex": "100 0 auto",
                    "maxWidth": null,
                    "width": "100px",
                  }
                }
                tabIndex="-1"
              >
                <div
                  className="rt-resizable-header-content"
                >
                  Request date
                </div>
                <div
                  className="rt-resizer"
                  onMouseDown={[Function]}
                  onTouchStart={[Function]}
                />
              </div>
              <div
                className="rt-th rt-resizable-header -cursor-pointer"
                onClick={[Function]}
                role="columnheader"
                style={
                  Object {
                    "flex": "100 0 auto",
                    "maxWidth": null,
                    "width": "100px",
                  }
                }
                tabIndex="-1"
              >
                <div
                  className="rt-resizable-header-content"
                >
                  Status
                </div>
                <div
                  className="rt-resizer"
                  onMouseDown={[Function]}
                  onTouchStart={[Function]}
                />
              </div>
            </div>
          </div>
          <div
            className="rt-thead -filters"
            style={
              Object {
                "minWidth": "300px",
              }
            }
          >
            <div
              className="rt-tr"
              role="row"
            >
              <div
                className="rt-th"
                onClick={[Function]}
                role="columnheader"
                style={
                  Object {
                    "flex": "100 0 auto",
                    "maxWidth": null,
                    "width": "100px",
                  }
                }
                tabIndex="-1"
              >
                <input
                  onChange={[Function]}
                  style={
                    Object {
                      "width": "100%",
                    }
                  }
                  type="text"
                  value=""
                />
              </div>
              <div
                className="rt-th"
                onClick={[Function]}
                role="columnheader"
                style={
                  Object {
                    "flex": "100 0 auto",
                    "maxWidth": null,
                    "width": "100px",
                  }
                }
                tabIndex="-1"
              >
                <input
                  onChange={[Function]}
                  style={
                    Object {
                      "width": "100%",
                    }
                  }
                  type="text"
                  value=""
                />
              </div>
              <div
                className="rt-th"
                onClick={[Function]}
                role="columnheader"
                style={
                  Object {
                    "flex": "100 0 auto",
                    "maxWidth": null,
                    "width": "100px",
                  }
                }
                tabIndex="-1"
              >
                <select
                  onChange={[Function]}
                  style={
                    Object {
                      "width": "100%",
                    }
                  }
                  value="all"
                >
                  <option
                    value="all"
                  >
                    Show All
                  </option>
                  <option
                    value="reject"
                  >
                    Not approval
                  </option>
                  <option
                    value="resolve"
                  >
                    Approval
                  </option>
                  <option
                    value="wait"
                  >
                    Pending
                  </option>
                </select>
              </div>
            </div>
          </div>
          <div
            className="rt-tbody"
            style={
              Object {
                "minWidth": "300px",
              }
            }
          >
            <div
              className="rt-tr-group"
              role="rowgroup"
            >
              <div
                className="rt-tr -padRow -odd"
                role="row"
                style={Object {}}
              >
                <div
                  className="rt-td"
                  role="gridcell"
                  style={
                    Object {
                      "flex": "100 0 auto",
                      "maxWidth": null,
                      "width": "100px",
                    }
                  }
                >
                  <span>
                     
                  </span>
                </div>
                <div
                  className="rt-td"
                  role="gridcell"
                  style={
                    Object {
                      "flex": "100 0 auto",
                      "maxWidth": null,
                      "width": "100px",
                    }
                  }
                >
                  <span>
                     
                  </span>
                </div>
                <div
                  className="rt-td"
                  role="gridcell"
                  style={
                    Object {
                      "flex": "100 0 auto",
                      "maxWidth": null,
                      "width": "100px",
                    }
                  }
                >
                  <span>
                     
                  </span>
                </div>
              </div>
            </div>
            <div
              className="rt-tr-group"
              role="rowgroup"
            >
              <div
                className="rt-tr -padRow -even"
                role="row"
                style={Object {}}
              >
                <div
                  className="rt-td"
                  role="gridcell"
                  style={
                    Object {
                      "flex": "100 0 auto",
                      "maxWidth": null,
                      "width": "100px",
                    }
                  }
                >
                  <span>
                     
                  </span>
                </div>
                <div
                  className="rt-td"
                  role="gridcell"
                  style={
                    Object {
                      "flex": "100 0 auto",
                      "maxWidth": null,
                      "width": "100px",
                    }
                  }
                >
                  <span>
                     
                  </span>
                </div>
                <div
                  className="rt-td"
                  role="gridcell"
                  style={
                    Object {
                      "flex": "100 0 auto",
                      "maxWidth": null,
                      "width": "100px",
                    }
                  }
                >
                  <span>
                     
                  </span>
                </div>
              </div>
            </div>
            <div
              className="rt-tr-group"
              role="rowgroup"
            >
              <div
                className="rt-tr -padRow -odd"
                role="row"
                style={Object {}}
              >
                <div
                  className="rt-td"
                  role="gridcell"
                  style={
                    Object {
                      "flex": "100 0 auto",
                      "maxWidth": null,
                      "width": "100px",
                    }
                  }
                >
                  <span>
                     
                  </span>
                </div>
                <div
                  className="rt-td"
                  role="gridcell"
                  style={
                    Object {
                      "flex": "100 0 auto",
                      "maxWidth": null,
                      "width": "100px",
                    }
                  }
                >
                  <span>
                     
                  </span>
                </div>
                <div
                  className="rt-td"
                  role="gridcell"
                  style={
                    Object {
                      "flex": "100 0 auto",
                      "maxWidth": null,
                      "width": "100px",
                    }
                  }
                >
                  <span>
                     
                  </span>
                </div>
              </div>
            </div>
            <div
              className="rt-tr-group"
              role="rowgroup"
            >
              <div
                className="rt-tr -padRow -even"
                role="row"
                style={Object {}}
              >
                <div
                  className="rt-td"
                  role="gridcell"
                  style={
                    Object {
                      "flex": "100 0 auto",
                      "maxWidth": null,
                      "width": "100px",
                    }
                  }
                >
                  <span>
                     
                  </span>
                </div>
                <div
                  className="rt-td"
                  role="gridcell"
                  style={
                    Object {
                      "flex": "100 0 auto",
                      "maxWidth": null,
                      "width": "100px",
                    }
                  }
                >
                  <span>
                     
                  </span>
                </div>
                <div
                  className="rt-td"
                  role="gridcell"
                  style={
                    Object {
                      "flex": "100 0 auto",
                      "maxWidth": null,
                      "width": "100px",
                    }
                  }
                >
                  <span>
                     
                  </span>
                </div>
              </div>
            </div>
            <div
              className="rt-tr-group"
              role="rowgroup"
            >
              <div
                className="rt-tr -padRow -odd"
                role="row"
                style={Object {}}
              >
                <div
                  className="rt-td"
                  role="gridcell"
                  style={
                    Object {
                      "flex": "100 0 auto",
                      "maxWidth": null,
                      "width": "100px",
                    }
                  }
                >
                  <span>
                     
                  </span>
                </div>
                <div
                  className="rt-td"
                  role="gridcell"
                  style={
                    Object {
                      "flex": "100 0 auto",
                      "maxWidth": null,
                      "width": "100px",
                    }
                  }
                >
                  <span>
                     
                  </span>
                </div>
                <div
                  className="rt-td"
                  role="gridcell"
                  style={
                    Object {
                      "flex": "100 0 auto",
                      "maxWidth": null,
                      "width": "100px",
                    }
                  }
                >
                  <span>
                     
                  </span>
                </div>
              </div>
            </div>
            <div
              className="rt-tr-group"
              role="rowgroup"
            >
              <div
                className="rt-tr -padRow -even"
                role="row"
                style={Object {}}
              >
                <div
                  className="rt-td"
                  role="gridcell"
                  style={
                    Object {
                      "flex": "100 0 auto",
                      "maxWidth": null,
                      "width": "100px",
                    }
                  }
                >
                  <span>
                     
                  </span>
                </div>
                <div
                  className="rt-td"
                  role="gridcell"
                  style={
                    Object {
                      "flex": "100 0 auto",
                      "maxWidth": null,
                      "width": "100px",
                    }
                  }
                >
                  <span>
                     
                  </span>
                </div>
                <div
                  className="rt-td"
                  role="gridcell"
                  style={
                    Object {
                      "flex": "100 0 auto",
                      "maxWidth": null,
                      "width": "100px",
                    }
                  }
                >
                  <span>
                     
                  </span>
                </div>
              </div>
            </div>
            <div
              className="rt-tr-group"
              role="rowgroup"
            >
              <div
                className="rt-tr -padRow -odd"
                role="row"
                style={Object {}}
              >
                <div
                  className="rt-td"
                  role="gridcell"
                  style={
                    Object {
                      "flex": "100 0 auto",
                      "maxWidth": null,
                      "width": "100px",
                    }
                  }
                >
                  <span>
                     
                  </span>
                </div>
                <div
                  className="rt-td"
                  role="gridcell"
                  style={
                    Object {
                      "flex": "100 0 auto",
                      "maxWidth": null,
                      "width": "100px",
                    }
                  }
                >
                  <span>
                     
                  </span>
                </div>
                <div
                  className="rt-td"
                  role="gridcell"
                  style={
                    Object {
                      "flex": "100 0 auto",
                      "maxWidth": null,
                      "width": "100px",
                    }
                  }
                >
                  <span>
                     
                  </span>
                </div>
              </div>
            </div>
            <div
              className="rt-tr-group"
              role="rowgroup"
            >
              <div
                className="rt-tr -padRow -even"
                role="row"
                style={Object {}}
              >
                <div
                  className="rt-td"
                  role="gridcell"
                  style={
                    Object {
                      "flex": "100 0 auto",
                      "maxWidth": null,
                      "width": "100px",
                    }
                  }
                >
                  <span>
                     
                  </span>
                </div>
                <div
                  className="rt-td"
                  role="gridcell"
                  style={
                    Object {
                      "flex": "100 0 auto",
                      "maxWidth": null,
                      "width": "100px",
                    }
                  }
                >
                  <span>
                     
                  </span>
                </div>
                <div
                  className="rt-td"
                  role="gridcell"
                  style={
                    Object {
                      "flex": "100 0 auto",
                      "maxWidth": null,
                      "width": "100px",
                    }
                  }
                >
                  <span>
                     
                  </span>
                </div>
              </div>
            </div>
            <div
              className="rt-tr-group"
              role="rowgroup"
            >
              <div
                className="rt-tr -padRow -odd"
                role="row"
                style={Object {}}
              >
                <div
                  className="rt-td"
                  role="gridcell"
                  style={
                    Object {
                      "flex": "100 0 auto",
                      "maxWidth": null,
                      "width": "100px",
                    }
                  }
                >
                  <span>
                     
                  </span>
                </div>
                <div
                  className="rt-td"
                  role="gridcell"
                  style={
                    Object {
                      "flex": "100 0 auto",
                      "maxWidth": null,
                      "width": "100px",
                    }
                  }
                >
                  <span>
                     
                  </span>
                </div>
                <div
                  className="rt-td"
                  role="gridcell"
                  style={
                    Object {
                      "flex": "100 0 auto",
                      "maxWidth": null,
                      "width": "100px",
                    }
                  }
                >
                  <span>
                     
                  </span>
                </div>
              </div>
            </div>
            <div
              className="rt-tr-group"
              role="rowgroup"
            >
              <div
                className="rt-tr -padRow -even"
                role="row"
                style={Object {}}
              >
                <div
                  className="rt-td"
                  role="gridcell"
                  style={
                    Object {
                      "flex": "100 0 auto",
                      "maxWidth": null,
                      "width": "100px",
                    }
                  }
                >
                  <span>
                     
                  </span>
                </div>
                <div
                  className="rt-td"
                  role="gridcell"
                  style={
                    Object {
                      "flex": "100 0 auto",
                      "maxWidth": null,
                      "width": "100px",
                    }
                  }
                >
                  <span>
                     
                  </span>
                </div>
                <div
                  className="rt-td"
                  role="gridcell"
                  style={
                    Object {
                      "flex": "100 0 auto",
                      "maxWidth": null,
                      "width": "100px",
                    }
                  }
                >
                  <span>
                     
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="pagination-bottom"
        >
          <div
            className="sc-1jxwge6-0 wterhv-0 sc-1xpfs2x-2 ZdjAX"
          >
            <div
              className="sc-1jxwge6-0 iiFwBA"
              width="256px"
            >
              <button
                className="mxzgdr-0 euDJBk"
                disabled={true}
                onClick={[Function]}
                size="large"
                type="button"
              >
                <div
                  className="sc-1jxwge6-0 wterhv-0 eZGOHC"
                  width="100%"
                >
                  <div
                    className="sc-1jxwge6-0 wterhv-0 irkFkV"
                  >
                    <div
                      className="sc-1jxwge6-0 sc-18ch56c-0 iDivPt"
                      color="color1"
                      fill="inherit"
                      fontSize={13}
                    >
                      <svg
                        fill="inherit"
                        height="32px"
                        viewBox="0 0 40 40"
                        width="32px"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M6.43694 20.427C6.32825 20.3104 6.27394 20.1616 6.27394 20.0127C6.27394 19.8657 6.32706 19.7181 6.43388 19.6015L13.8755 11.4488C14.1025 11.1999 14.4882 11.1822 14.7373 11.4097C14.9863 11.6367 15.0027 12.0228 14.7763 12.2711L8.30219 19.3642L33.125 19.3642L33.125 20.5978L8.25831 20.5978L14.8312 27.6878C15.0607 27.9336 15.0461 28.3198 14.7983 28.5492C14.5518 28.778 14.1654 28.7633 13.9365 28.5163L6.43694 20.427Z"
                          fill="inherit"
                        />
                        <path
                          d="M20 40C8.95432 40 0 31.0457 0 20C0 8.95431 8.95432 0 20 0C31.0458 0 40 8.95431 40 20C40 31.0457 31.0458 40 20 40ZM20 38.75C30.3388 38.75 38.75 30.3388 38.75 20C38.75 9.66125 30.3388 1.25 20 1.25C9.66119 1.25 1.25 9.66125 1.25 20C1.25 30.3388 9.66119 38.75 20 38.75Z"
                          fill="inherit"
                        />
                      </svg>
                    </div>
                  </div>
                  <div
                    className="sc-1jxwge6-0 wterhv-0 irkFkV"
                  >
                    Previous
                  </div>
                  <div />
                </div>
              </button>
            </div>
            <div
              className="sc-1jxwge6-0 -center wterhv-0 gVcphP"
              width="100%"
            >
              <div
                className="sc-1jxwge6-0 wterhv-0 bfjBXV"
                style={
                  Object {
                    "borderRight": "1px solid rgba(162, 162, 162, 0.2)",
                  }
                }
                width="50%"
              >
                <div
                  className="sc-1jxwge6-0 sc-18ch56c-0 eiPgyn"
                  color="color1"
                  fontFamily="medium"
                  fontSize={6}
                >
                  Page
                </div>
                <div
                  className="sc-1jxwge6-0 eDvOfB"
                >
                  <input
                    className="sc-1xpfs2x-0 ifcyDr"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onKeyPress={[Function]}
                    type="number"
                    value={1}
                  />
                </div>
                <div
                  className="sc-1jxwge6-0 sc-18ch56c-0 gumoZQ"
                  color="color1"
                  fontFamily="medium"
                  fontSize={6}
                >
                  of
                   
                  1
                </div>
              </div>
              <div
                className="sc-1jxwge6-0 wterhv-0 bfjBXV"
                width="50%"
              >
                 
                <span
                  className="select-wrap -pageSizeOptions"
                >
                  <select
                    className="sc-1xpfs2x-1 klleuH"
                    onChange={[Function]}
                    value={10}
                  >
                    <option
                      value={5}
                    >
                      5
                       
                      rows
                    </option>
                    <option
                      value={10}
                    >
                      10
                       
                      rows
                    </option>
                    <option
                      value={20}
                    >
                      20
                       
                      rows
                    </option>
                    <option
                      value={25}
                    >
                      25
                       
                      rows
                    </option>
                    <option
                      value={50}
                    >
                      50
                       
                      rows
                    </option>
                    <option
                      value={100}
                    >
                      100
                       
                      rows
                    </option>
                  </select>
                </span>
              </div>
            </div>
            <div
              className="sc-1jxwge6-0 iiFwBA"
              width="256px"
            >
              <button
                className="mxzgdr-0 euDJBk"
                disabled={true}
                onClick={[Function]}
                size="large"
                type="button"
              >
                <div
                  className="sc-1jxwge6-0 wterhv-0 eZGOHC"
                  width="100%"
                >
                  <div />
                  <div
                    className="sc-1jxwge6-0 wterhv-0 irkFkV"
                  >
                    Next
                  </div>
                  <div
                    className="sc-1jxwge6-0 wterhv-0 irkFkV"
                  >
                    <div
                      className="sc-1jxwge6-0 sc-18ch56c-0 iDivPt"
                      color="color1"
                      fill="inherit"
                      fontSize={13}
                    >
                      <svg
                        fill="inherit"
                        height="32px"
                        viewBox="0 0 40 41"
                        width="32px"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M33.5631 20.9259C33.6718 20.8075 33.7261 20.6563 33.7261 20.5051C33.7261 20.3557 33.6729 20.2058 33.5661 20.0873L26.1245 11.8052C25.8975 11.5524 25.5118 11.5344 25.2627 11.7655C25.0137 11.9961 24.9973 12.3884 25.2237 12.6406L31.6978 19.8463L6.875 19.8463L6.875 21.0994L31.7417 21.0994L25.1688 28.3019C24.9393 28.5517 24.9539 28.944 25.2017 29.1771C25.4482 29.4094 25.8346 29.3946 26.0635 29.1436L33.5631 20.9259Z"
                          fill="inherit"
                        />
                        <path
                          d="M20 40.8095C31.0457 40.8095 40 31.7131 40 20.4921C40 9.27104 31.0457 0.174591 20 0.174591C8.95425 0.174591 0 9.27104 0 20.4921C0 31.7131 8.95425 40.8095 20 40.8095ZM20 39.5397C9.66119 39.5397 1.25 30.995 1.25 20.4921C1.25 9.98919 9.66119 1.44443 20 1.44443C30.3388 1.44443 38.75 9.98919 38.75 20.4921C38.75 30.995 30.3388 39.5397 20 39.5397Z"
                          fill="inherit"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </button>
            </div>
          </div>
        </div>
        <div
          className="sc-1jxwge6-0 d5w2g7-0 sc7u3f-0 hrhNNE"
        >
          <div
            className="sc-1jxwge6-0 sc-18ch56c-0 fFWriT"
            color="color1"
            fontSize={8}
          >
            No data
          </div>
        </div>
        <div
          className="sc-1jxwge6-0 d5w2g7-0 sc-1mb6nwv-0 eJUTlp"
        >
          <div
            className="sc-1jxwge6-0 sc-18ch56c-0 fzRVpo"
            color="color1"
            fontSize={12}
          >
            <div
              className="sc-181m7t4-0 ckrlTX"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`NotificationsPage: ошибка во время загрузки пользовательских данных 1`] = `
<div
  className="sc-bxivhb dUiVDW"
>
  <div
    className="sc-1jxwge6-0 sc-14k9gvj-0 haaFGH"
  >
    <div
      className="sc-1jxwge6-0 sc-18ch56c-0 jIipSW"
      color="color1"
      fontFamily="bold"
      fontSize={9}
      fontWeight="bold"
    >
      Notifications
    </div>
    <div
      className="sc-1jxwge6-0 jSlHKu"
    >
      <div
        className="ReactTable"
        style={Object {}}
      >
        <div
          className="rt-table"
          role="grid"
        >
          <div
            className="rt-thead -header"
            style={
              Object {
                "minWidth": "300px",
              }
            }
          >
            <div
              className="rt-tr"
              role="row"
            >
              <div
                className="rt-th rt-resizable-header -cursor-pointer"
                onClick={[Function]}
                role="columnheader"
                style={
                  Object {
                    "flex": "100 0 auto",
                    "maxWidth": null,
                    "width": "100px",
                  }
                }
                tabIndex="-1"
              >
                <div
                  className="rt-resizable-header-content"
                >
                  Client
                </div>
                <div
                  className="rt-resizer"
                  onMouseDown={[Function]}
                  onTouchStart={[Function]}
                />
              </div>
              <div
                className="rt-th rt-resizable-header -cursor-pointer"
                onClick={[Function]}
                role="columnheader"
                style={
                  Object {
                    "flex": "100 0 auto",
                    "maxWidth": null,
                    "width": "100px",
                  }
                }
                tabIndex="-1"
              >
                <div
                  className="rt-resizable-header-content"
                >
                  Request date
                </div>
                <div
                  className="rt-resizer"
                  onMouseDown={[Function]}
                  onTouchStart={[Function]}
                />
              </div>
              <div
                className="rt-th rt-resizable-header -cursor-pointer"
                onClick={[Function]}
                role="columnheader"
                style={
                  Object {
                    "flex": "100 0 auto",
                    "maxWidth": null,
                    "width": "100px",
                  }
                }
                tabIndex="-1"
              >
                <div
                  className="rt-resizable-header-content"
                >
                  Status
                </div>
                <div
                  className="rt-resizer"
                  onMouseDown={[Function]}
                  onTouchStart={[Function]}
                />
              </div>
            </div>
          </div>
          <div
            className="rt-thead -filters"
            style={
              Object {
                "minWidth": "300px",
              }
            }
          >
            <div
              className="rt-tr"
              role="row"
            >
              <div
                className="rt-th"
                onClick={[Function]}
                role="columnheader"
                style={
                  Object {
                    "flex": "100 0 auto",
                    "maxWidth": null,
                    "width": "100px",
                  }
                }
                tabIndex="-1"
              >
                <input
                  onChange={[Function]}
                  style={
                    Object {
                      "width": "100%",
                    }
                  }
                  type="text"
                  value=""
                />
              </div>
              <div
                className="rt-th"
                onClick={[Function]}
                role="columnheader"
                style={
                  Object {
                    "flex": "100 0 auto",
                    "maxWidth": null,
                    "width": "100px",
                  }
                }
                tabIndex="-1"
              >
                <input
                  onChange={[Function]}
                  style={
                    Object {
                      "width": "100%",
                    }
                  }
                  type="text"
                  value=""
                />
              </div>
              <div
                className="rt-th"
                onClick={[Function]}
                role="columnheader"
                style={
                  Object {
                    "flex": "100 0 auto",
                    "maxWidth": null,
                    "width": "100px",
                  }
                }
                tabIndex="-1"
              >
                <select
                  onChange={[Function]}
                  style={
                    Object {
                      "width": "100%",
                    }
                  }
                  value="all"
                >
                  <option
                    value="all"
                  >
                    Show All
                  </option>
                  <option
                    value="reject"
                  >
                    Not approval
                  </option>
                  <option
                    value="resolve"
                  >
                    Approval
                  </option>
                  <option
                    value="wait"
                  >
                    Pending
                  </option>
                </select>
              </div>
            </div>
          </div>
          <div
            className="rt-tbody"
            style={
              Object {
                "minWidth": "300px",
              }
            }
          >
            <div
              className="rt-tr-group"
              role="rowgroup"
            >
              <div
                className="rt-tr -padRow -odd"
                role="row"
                style={Object {}}
              >
                <div
                  className="rt-td"
                  role="gridcell"
                  style={
                    Object {
                      "flex": "100 0 auto",
                      "maxWidth": null,
                      "width": "100px",
                    }
                  }
                >
                  <span>
                     
                  </span>
                </div>
                <div
                  className="rt-td"
                  role="gridcell"
                  style={
                    Object {
                      "flex": "100 0 auto",
                      "maxWidth": null,
                      "width": "100px",
                    }
                  }
                >
                  <span>
                     
                  </span>
                </div>
                <div
                  className="rt-td"
                  role="gridcell"
                  style={
                    Object {
                      "flex": "100 0 auto",
                      "maxWidth": null,
                      "width": "100px",
                    }
                  }
                >
                  <span>
                     
                  </span>
                </div>
              </div>
            </div>
            <div
              className="rt-tr-group"
              role="rowgroup"
            >
              <div
                className="rt-tr -padRow -even"
                role="row"
                style={Object {}}
              >
                <div
                  className="rt-td"
                  role="gridcell"
                  style={
                    Object {
                      "flex": "100 0 auto",
                      "maxWidth": null,
                      "width": "100px",
                    }
                  }
                >
                  <span>
                     
                  </span>
                </div>
                <div
                  className="rt-td"
                  role="gridcell"
                  style={
                    Object {
                      "flex": "100 0 auto",
                      "maxWidth": null,
                      "width": "100px",
                    }
                  }
                >
                  <span>
                     
                  </span>
                </div>
                <div
                  className="rt-td"
                  role="gridcell"
                  style={
                    Object {
                      "flex": "100 0 auto",
                      "maxWidth": null,
                      "width": "100px",
                    }
                  }
                >
                  <span>
                     
                  </span>
                </div>
              </div>
            </div>
            <div
              className="rt-tr-group"
              role="rowgroup"
            >
              <div
                className="rt-tr -padRow -odd"
                role="row"
                style={Object {}}
              >
                <div
                  className="rt-td"
                  role="gridcell"
                  style={
                    Object {
                      "flex": "100 0 auto",
                      "maxWidth": null,
                      "width": "100px",
                    }
                  }
                >
                  <span>
                     
                  </span>
                </div>
                <div
                  className="rt-td"
                  role="gridcell"
                  style={
                    Object {
                      "flex": "100 0 auto",
                      "maxWidth": null,
                      "width": "100px",
                    }
                  }
                >
                  <span>
                     
                  </span>
                </div>
                <div
                  className="rt-td"
                  role="gridcell"
                  style={
                    Object {
                      "flex": "100 0 auto",
                      "maxWidth": null,
                      "width": "100px",
                    }
                  }
                >
                  <span>
                     
                  </span>
                </div>
              </div>
            </div>
            <div
              className="rt-tr-group"
              role="rowgroup"
            >
              <div
                className="rt-tr -padRow -even"
                role="row"
                style={Object {}}
              >
                <div
                  className="rt-td"
                  role="gridcell"
                  style={
                    Object {
                      "flex": "100 0 auto",
                      "maxWidth": null,
                      "width": "100px",
                    }
                  }
                >
                  <span>
                     
                  </span>
                </div>
                <div
                  className="rt-td"
                  role="gridcell"
                  style={
                    Object {
                      "flex": "100 0 auto",
                      "maxWidth": null,
                      "width": "100px",
                    }
                  }
                >
                  <span>
                     
                  </span>
                </div>
                <div
                  className="rt-td"
                  role="gridcell"
                  style={
                    Object {
                      "flex": "100 0 auto",
                      "maxWidth": null,
                      "width": "100px",
                    }
                  }
                >
                  <span>
                     
                  </span>
                </div>
              </div>
            </div>
            <div
              className="rt-tr-group"
              role="rowgroup"
            >
              <div
                className="rt-tr -padRow -odd"
                role="row"
                style={Object {}}
              >
                <div
                  className="rt-td"
                  role="gridcell"
                  style={
                    Object {
                      "flex": "100 0 auto",
                      "maxWidth": null,
                      "width": "100px",
                    }
                  }
                >
                  <span>
                     
                  </span>
                </div>
                <div
                  className="rt-td"
                  role="gridcell"
                  style={
                    Object {
                      "flex": "100 0 auto",
                      "maxWidth": null,
                      "width": "100px",
                    }
                  }
                >
                  <span>
                     
                  </span>
                </div>
                <div
                  className="rt-td"
                  role="gridcell"
                  style={
                    Object {
                      "flex": "100 0 auto",
                      "maxWidth": null,
                      "width": "100px",
                    }
                  }
                >
                  <span>
                     
                  </span>
                </div>
              </div>
            </div>
            <div
              className="rt-tr-group"
              role="rowgroup"
            >
              <div
                className="rt-tr -padRow -even"
                role="row"
                style={Object {}}
              >
                <div
                  className="rt-td"
                  role="gridcell"
                  style={
                    Object {
                      "flex": "100 0 auto",
                      "maxWidth": null,
                      "width": "100px",
                    }
                  }
                >
                  <span>
                     
                  </span>
                </div>
                <div
                  className="rt-td"
                  role="gridcell"
                  style={
                    Object {
                      "flex": "100 0 auto",
                      "maxWidth": null,
                      "width": "100px",
                    }
                  }
                >
                  <span>
                     
                  </span>
                </div>
                <div
                  className="rt-td"
                  role="gridcell"
                  style={
                    Object {
                      "flex": "100 0 auto",
                      "maxWidth": null,
                      "width": "100px",
                    }
                  }
                >
                  <span>
                     
                  </span>
                </div>
              </div>
            </div>
            <div
              className="rt-tr-group"
              role="rowgroup"
            >
              <div
                className="rt-tr -padRow -odd"
                role="row"
                style={Object {}}
              >
                <div
                  className="rt-td"
                  role="gridcell"
                  style={
                    Object {
                      "flex": "100 0 auto",
                      "maxWidth": null,
                      "width": "100px",
                    }
                  }
                >
                  <span>
                     
                  </span>
                </div>
                <div
                  className="rt-td"
                  role="gridcell"
                  style={
                    Object {
                      "flex": "100 0 auto",
                      "maxWidth": null,
                      "width": "100px",
                    }
                  }
                >
                  <span>
                     
                  </span>
                </div>
                <div
                  className="rt-td"
                  role="gridcell"
                  style={
                    Object {
                      "flex": "100 0 auto",
                      "maxWidth": null,
                      "width": "100px",
                    }
                  }
                >
                  <span>
                     
                  </span>
                </div>
              </div>
            </div>
            <div
              className="rt-tr-group"
              role="rowgroup"
            >
              <div
                className="rt-tr -padRow -even"
                role="row"
                style={Object {}}
              >
                <div
                  className="rt-td"
                  role="gridcell"
                  style={
                    Object {
                      "flex": "100 0 auto",
                      "maxWidth": null,
                      "width": "100px",
                    }
                  }
                >
                  <span>
                     
                  </span>
                </div>
                <div
                  className="rt-td"
                  role="gridcell"
                  style={
                    Object {
                      "flex": "100 0 auto",
                      "maxWidth": null,
                      "width": "100px",
                    }
                  }
                >
                  <span>
                     
                  </span>
                </div>
                <div
                  className="rt-td"
                  role="gridcell"
                  style={
                    Object {
                      "flex": "100 0 auto",
                      "maxWidth": null,
                      "width": "100px",
                    }
                  }
                >
                  <span>
                     
                  </span>
                </div>
              </div>
            </div>
            <div
              className="rt-tr-group"
              role="rowgroup"
            >
              <div
                className="rt-tr -padRow -odd"
                role="row"
                style={Object {}}
              >
                <div
                  className="rt-td"
                  role="gridcell"
                  style={
                    Object {
                      "flex": "100 0 auto",
                      "maxWidth": null,
                      "width": "100px",
                    }
                  }
                >
                  <span>
                     
                  </span>
                </div>
                <div
                  className="rt-td"
                  role="gridcell"
                  style={
                    Object {
                      "flex": "100 0 auto",
                      "maxWidth": null,
                      "width": "100px",
                    }
                  }
                >
                  <span>
                     
                  </span>
                </div>
                <div
                  className="rt-td"
                  role="gridcell"
                  style={
                    Object {
                      "flex": "100 0 auto",
                      "maxWidth": null,
                      "width": "100px",
                    }
                  }
                >
                  <span>
                     
                  </span>
                </div>
              </div>
            </div>
            <div
              className="rt-tr-group"
              role="rowgroup"
            >
              <div
                className="rt-tr -padRow -even"
                role="row"
                style={Object {}}
              >
                <div
                  className="rt-td"
                  role="gridcell"
                  style={
                    Object {
                      "flex": "100 0 auto",
                      "maxWidth": null,
                      "width": "100px",
                    }
                  }
                >
                  <span>
                     
                  </span>
                </div>
                <div
                  className="rt-td"
                  role="gridcell"
                  style={
                    Object {
                      "flex": "100 0 auto",
                      "maxWidth": null,
                      "width": "100px",
                    }
                  }
                >
                  <span>
                     
                  </span>
                </div>
                <div
                  className="rt-td"
                  role="gridcell"
                  style={
                    Object {
                      "flex": "100 0 auto",
                      "maxWidth": null,
                      "width": "100px",
                    }
                  }
                >
                  <span>
                     
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="pagination-bottom"
        >
          <div
            className="sc-1jxwge6-0 wterhv-0 sc-1xpfs2x-2 ZdjAX"
          >
            <div
              className="sc-1jxwge6-0 iiFwBA"
              width="256px"
            >
              <button
                className="mxzgdr-0 euDJBk"
                disabled={true}
                onClick={[Function]}
                size="large"
                type="button"
              >
                <div
                  className="sc-1jxwge6-0 wterhv-0 eZGOHC"
                  width="100%"
                >
                  <div
                    className="sc-1jxwge6-0 wterhv-0 irkFkV"
                  >
                    <div
                      className="sc-1jxwge6-0 sc-18ch56c-0 iDivPt"
                      color="color1"
                      fill="inherit"
                      fontSize={13}
                    >
                      <svg
                        fill="inherit"
                        height="32px"
                        viewBox="0 0 40 40"
                        width="32px"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M6.43694 20.427C6.32825 20.3104 6.27394 20.1616 6.27394 20.0127C6.27394 19.8657 6.32706 19.7181 6.43388 19.6015L13.8755 11.4488C14.1025 11.1999 14.4882 11.1822 14.7373 11.4097C14.9863 11.6367 15.0027 12.0228 14.7763 12.2711L8.30219 19.3642L33.125 19.3642L33.125 20.5978L8.25831 20.5978L14.8312 27.6878C15.0607 27.9336 15.0461 28.3198 14.7983 28.5492C14.5518 28.778 14.1654 28.7633 13.9365 28.5163L6.43694 20.427Z"
                          fill="inherit"
                        />
                        <path
                          d="M20 40C8.95432 40 0 31.0457 0 20C0 8.95431 8.95432 0 20 0C31.0458 0 40 8.95431 40 20C40 31.0457 31.0458 40 20 40ZM20 38.75C30.3388 38.75 38.75 30.3388 38.75 20C38.75 9.66125 30.3388 1.25 20 1.25C9.66119 1.25 1.25 9.66125 1.25 20C1.25 30.3388 9.66119 38.75 20 38.75Z"
                          fill="inherit"
                        />
                      </svg>
                    </div>
                  </div>
                  <div
                    className="sc-1jxwge6-0 wterhv-0 irkFkV"
                  >
                    Previous
                  </div>
                  <div />
                </div>
              </button>
            </div>
            <div
              className="sc-1jxwge6-0 -center wterhv-0 gVcphP"
              width="100%"
            >
              <div
                className="sc-1jxwge6-0 wterhv-0 bfjBXV"
                style={
                  Object {
                    "borderRight": "1px solid rgba(162, 162, 162, 0.2)",
                  }
                }
                width="50%"
              >
                <div
                  className="sc-1jxwge6-0 sc-18ch56c-0 eiPgyn"
                  color="color1"
                  fontFamily="medium"
                  fontSize={6}
                >
                  Page
                </div>
                <div
                  className="sc-1jxwge6-0 eDvOfB"
                >
                  <input
                    className="sc-1xpfs2x-0 ifcyDr"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onKeyPress={[Function]}
                    type="number"
                    value={1}
                  />
                </div>
                <div
                  className="sc-1jxwge6-0 sc-18ch56c-0 gumoZQ"
                  color="color1"
                  fontFamily="medium"
                  fontSize={6}
                >
                  of
                   
                  1
                </div>
              </div>
              <div
                className="sc-1jxwge6-0 wterhv-0 bfjBXV"
                width="50%"
              >
                 
                <span
                  className="select-wrap -pageSizeOptions"
                >
                  <select
                    className="sc-1xpfs2x-1 klleuH"
                    onChange={[Function]}
                    value={10}
                  >
                    <option
                      value={5}
                    >
                      5
                       
                      rows
                    </option>
                    <option
                      value={10}
                    >
                      10
                       
                      rows
                    </option>
                    <option
                      value={20}
                    >
                      20
                       
                      rows
                    </option>
                    <option
                      value={25}
                    >
                      25
                       
                      rows
                    </option>
                    <option
                      value={50}
                    >
                      50
                       
                      rows
                    </option>
                    <option
                      value={100}
                    >
                      100
                       
                      rows
                    </option>
                  </select>
                </span>
              </div>
            </div>
            <div
              className="sc-1jxwge6-0 iiFwBA"
              width="256px"
            >
              <button
                className="mxzgdr-0 euDJBk"
                disabled={true}
                onClick={[Function]}
                size="large"
                type="button"
              >
                <div
                  className="sc-1jxwge6-0 wterhv-0 eZGOHC"
                  width="100%"
                >
                  <div />
                  <div
                    className="sc-1jxwge6-0 wterhv-0 irkFkV"
                  >
                    Next
                  </div>
                  <div
                    className="sc-1jxwge6-0 wterhv-0 irkFkV"
                  >
                    <div
                      className="sc-1jxwge6-0 sc-18ch56c-0 iDivPt"
                      color="color1"
                      fill="inherit"
                      fontSize={13}
                    >
                      <svg
                        fill="inherit"
                        height="32px"
                        viewBox="0 0 40 41"
                        width="32px"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M33.5631 20.9259C33.6718 20.8075 33.7261 20.6563 33.7261 20.5051C33.7261 20.3557 33.6729 20.2058 33.5661 20.0873L26.1245 11.8052C25.8975 11.5524 25.5118 11.5344 25.2627 11.7655C25.0137 11.9961 24.9973 12.3884 25.2237 12.6406L31.6978 19.8463L6.875 19.8463L6.875 21.0994L31.7417 21.0994L25.1688 28.3019C24.9393 28.5517 24.9539 28.944 25.2017 29.1771C25.4482 29.4094 25.8346 29.3946 26.0635 29.1436L33.5631 20.9259Z"
                          fill="inherit"
                        />
                        <path
                          d="M20 40.8095C31.0457 40.8095 40 31.7131 40 20.4921C40 9.27104 31.0457 0.174591 20 0.174591C8.95425 0.174591 0 9.27104 0 20.4921C0 31.7131 8.95425 40.8095 20 40.8095ZM20 39.5397C9.66119 39.5397 1.25 30.995 1.25 20.4921C1.25 9.98919 9.66119 1.44443 20 1.44443C30.3388 1.44443 38.75 9.98919 38.75 20.4921C38.75 30.995 30.3388 39.5397 20 39.5397Z"
                          fill="inherit"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </button>
            </div>
          </div>
        </div>
        <div
          className="sc-1jxwge6-0 d5w2g7-0 sc-7kykx0-0 fYRoBJ"
        >
          <div
            className="sc-1jxwge6-0 wterhv-0 sc-7kykx0-1 gabwNl"
          >
            <svg
              fill="inherit"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M15.8047 0.195349C15.5443 -0.0651165 15.1224 -0.0651165 14.862 0.195349L8 7.05728L1.13802 0.195349C0.877615 -0.0651165 0.455749 -0.0651165 0.195349 0.195349C-0.0651164 0.455749 -0.0651164 0.877616 0.195349 1.13802L7.05727 8.00001L0.195349 14.862C-0.0651164 15.1224 -0.0651164 15.5443 0.195349 15.8047C0.32555 15.9349 0.496083 16 0.666682 16C0.837281 16 1.00781 15.9349 1.13802 15.8047L8 8.94274L14.862 15.8047C14.9922 15.9349 15.1627 16 15.3333 16C15.5039 16 15.6744 15.9349 15.8047 15.8047C16.0651 15.5443 16.0651 15.1224 15.8047 14.862L8.94273 8.00001L15.8047 1.13802C16.0651 0.877616 16.0651 0.455749 15.8047 0.195349Z"
                fill="inherit"
              />
            </svg>
            <div
              className="sc-1jxwge6-0 sc-18ch56c-0 cAzeUN"
              color="color1"
              fontSize={8}
            >
              loading error
            </div>
          </div>
        </div>
        <div
          className="sc-1jxwge6-0 d5w2g7-0 sc-1mb6nwv-0 eDeYkT"
        >
          <div
            className="sc-1jxwge6-0 sc-18ch56c-0 fzRVpo"
            color="color1"
            fontSize={12}
          >
            <div
              className="sc-181m7t4-0 ckrlTX"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
